[package]
name = "tauri-nspanel"
version = "0.0.0"
authors = ["Victor Aremu"]
description = "A plugin for subclassing Tauri's NSWindow to NSPanel"
edition = "2021"
rust-version = "1.59"
exclude = ["/examples"]

[dependencies]
block = "0.1.6"
tauri = { version = "1.6.2" }
bitflags = "2.5.0"

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = { version = "0.23.2" }
core-foundation = { version = "0.9.4" }
cocoa = { version = "0.25.0" }
objc = { version = "0.2.7" }
objc_id = { version = "0.1.1" }
objc-foundation = { version = "0.1.1" }
