[package]
name = "tauri-nspanel"
version = "2.0.0-beta"
authors = ["Victor Aremu <me@victorare.mu>"]
description = "A plugin for subclassing Tauri's NSWindow to NSPanel"
edition = "2021"
rust-version = "1.75"
exclude = ["/examples"]

[dependencies]
block = "0.1.6"
tauri = { version = "2.0.0-beta" }
bitflags = "2.4.2"

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = { version = "0.23.2" }
core-foundation = { version = "0.10.0" }
cocoa = { version = "0.26.0" }
objc = { version = "0.2.7" }
objc_id = { version = "0.1.1" }
objc-foundation = { version = "0.1.1" }
