[package]
name = "app"
version = "2.0.0-beta"
description = "A Tauri App"
authors = ["Victor Aremu <me@victorare.mu>"]
repository = ""
edition = "2021"
rust-version = "1.75"

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.213", features = ["derive"] }
tauri = { version = "2.0.6", features = [] }
tauri-nspanel = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
